#438: Added GPU Resource Considerations Notebook (#444)
Co-authored-by: ckunki <christoph.kuhnke@exasol.com>
Co-authored-by: Christoph Kuhnke <github@kuhnke.net>
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "3099daff8bb6b53f",
+   "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
@@ -19,123 +20,129 @@
     "Once our tables are set up and populated, we will utilize a powerful natural language processing approach to link news article titles to their most relevant topics. Specifically, we will employ the `sentence-transformers` model—a state-of-the-art model designed for producing high-quality sentence embeddings. This model will run in a UDF leveraging the GPU to efficiently generate vector representations for both the titles and topics.\n",
     "\n",
     "By comparing these embeddings, our system will automatically match each article title with the most relevant topic from our topics table. Finally, we will output the top-N topics for each title, providing valuable insights into the subject distribution of our set of news articles."
-   ],
-   "id": "3099daff8bb6b53f"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Open Secure Configuration Storage",
-   "id": "50a2988007bec846"
+   "id": "50a2988007bec846",
+   "metadata": {},
+   "source": [
+    "### Open Secure Configuration Storage"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "cb54534177a867be",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ],
-   "id": "cb54534177a867be"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "73a7e60d9fe78077",
+   "metadata": {},
    "source": [
     "### Prerequisites\n",
     "- Run the [S3 VS tutorial](../cloud/02_s3_vs_reuters.ipynb) in order to populate the input data"
-   ],
-   "id": "73a7e60d9fe78077"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "fd5b8ce9f2bc2326",
+   "metadata": {},
    "source": [
     "### Instantiate ScriptLanguagesContainer\n",
     "\n",
     "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
     "which enables us to use a custom Script Language Container (SLC)"
-   ],
-   "id": "fd5b8ce9f2bc2326"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "86d94d7e56b6e3da",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.slc import ScriptLanguageContainer\n",
     "slc = ScriptLanguageContainer(secrets=ai_lab_config, name=\"gpu_slc\")"
-   ],
-   "id": "86d94d7e56b6e3da"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Connect to the Database and activate the Container",
-   "id": "3591c8128d27776"
+   "id": "3591c8128d27776",
+   "metadata": {},
+   "source": [
+    "### Connect to the Database and activate the Container"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "d1b725da3391679d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.language_container_activation import open_pyexasol_connection_with_lang_definitions\n",
     "\n",
     "conn = open_pyexasol_connection_with_lang_definitions(ai_lab_config, schema=ai_lab_config.db_schema, compression=True)"
-   ],
-   "id": "d1b725da3391679d"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Prepare the Models",
-   "id": "5f87d10ed6cf0835"
+   "id": "5f87d10ed6cf0835",
+   "metadata": {},
+   "source": [
+    "### Prepare the Models"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "7e71b1278aa02213",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModel"
-   ],
-   "id": "7e71b1278aa02213"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea370394b0492712",
    "metadata": {
     "tags": [
      "uploading_model"
     ]
    },
-   "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
    "source": [
     "install_model(ai_lab_config, TransformerModel(\n",
     "                \"sentence-transformers/all-mpnet-base-v2\", \"feature-extraction\", AutoModel\n",
     "            ),)"
-   ],
-   "id": "ea370394b0492712"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "67d0dc114de6c50",
+   "metadata": {},
    "source": [
     "### Create the UDF\n",
     "\n",
     "Now we are ready to create the UDF implementing the \"semantic join\" between pairs of text data (_text1_, _text2_) by computing their semantic similarity using a transformer neural network model (from the sentence-transformers library). It runs on a GPU and is designed to scale to large amounts of data by processing in batches. For each pair (_text1_, _text2_), it computes the cosine similarity between their embeddings on the GPU. The UDF returns (emits) _text1_ and _text2_, as well as the `similarity_score` (between -1 and 1, with 1.0 = identical).\n"
-   ],
-   "id": "67d0dc114de6c50"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "f343b288db1d4614",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sql_semantic_join = f\"\"\"\n",
     "--/\n",
@@ -242,45 +249,47 @@
     "/\n",
     "\"\"\"\n",
     "conn.execute(sql_semantic_join)"
-   ],
-   "id": "f343b288db1d4614"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "34c2b7fa6edb53b5",
+   "metadata": {},
    "source": [
     "### Initialize JupySQL\n",
     "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using the Exasol SQLAlchemy driver."
-   ],
-   "id": "34c2b7fa6edb53b5"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "%run ../utils/jupysql_init.ipynb",
-   "id": "21770aa932a9fb4b"
+   "id": "21770aa932a9fb4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ../utils/jupysql_init.ipynb"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "68e6a6cadb020ea8",
+   "metadata": {},
    "source": [
     "### Run the UDF on the New Data\n",
     "\n",
     "Now we apply the `semantic_join` UDF on the topics and titles from the NEWS table, which was created by the S3 Virtual Schema tutorial. The query will return for every news TITLE, the TOPICs that best semantically match it, ranks them by how similar they are, and filters out all but the strong matches (similarity > 0.5). You get, for each TITLE, a list of most plausible TOPICs, in order."
-   ],
-   "id": "68e6a6cadb020ea8"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9886b4638692671",
    "metadata": {
     "SqlCellData": {
      "variableName$1": "df_sql1"
     }
    },
-   "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
    "source": [
     "%%sql\n",
     "SELECT *\n",
@@ -306,44 +315,39 @@
     ")\n",
     "WHERE r<=5\n",
     "ORDER BY TITLE, r ASC"
-   ],
-   "id": "a9886b4638692671"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "2e1d00d1b4c3ea0f",
+   "metadata": {},
    "source": [
     "### Additional Notes\n",
     "\n",
     "#### Parallel execution\n",
     "Please note that executing multiple queries with GPU UDFs in parallel can lead to unexpected errors, as the GPU libraries used within the UDFs may attempt to allocate the same GPU device and memory simultaneously. In the current Exasol version, the user responsible to ensure that the libraries are configured appropriately or that only one query uses a GPU device.\n",
-    "Here some links which might be helpful for the configuration:\n",
-    "- [Manage GPU Memory When Using TensorFlow and PyTorch](https://docs.ncsa.illinois.edu/systems/hal/en/latest/user-guide/prog-env/gpu-memory.html)\n",
-    "- [Set per process memory fraction for Pytorch](https://docs.pytorch.org/docs/stable/generated/torch.cuda.memory.set_per_process_memory_fraction.html)\n",
-    "- [TensorFlow LogicalDeviceConfiguration](https://www.tensorflow.org/api_docs/python/tf/config/LogicalDeviceConfiguration)\n",
     "\n",
-    "Additionally, it is possible to control the number of parallel UDF instances per Node and Call by setting the  [UDF Instance Limit](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/udf_instance_limit.htm).\n"
-   ],
-   "id": "2e1d00d1b4c3ea0f"
+    "Check out the [GPU Resource Considerations](./gpu_resource_considerations.ipynb) model for more information."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
