better explanation of input and output

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "## Use the language model\n",
     "\n",
-    "We will now use the `TE_TRANSLATION_UDF` translate some text from English to German."
+    "We will now use the `TE_TRANSLATION_UDF` to translate some text from English to German."
    ]
   },
   {
