--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "## Use the language model\n",
     "\n",
-    "Let's see if the model can fill in a masked word in the following text. This is an instruction usually given to a patient when a radiographer is doing a chest X-ray."
+    "Let's see if the model can fill in a masked word in the following text. We will be using the TE_FILLING_MASK_UDF` for this. We will use an patient-instruction as the input text."
    ]
   },
   {
@@ -100,6 +100,7 @@
    "metadata": {},
    "source": [
     "# This is a sentence with a masked word that will be given to the model.\n",
+    "# It instruction usually given to a patient when a radiographer is doing a chest X-ray\n",
     "MY_TEXT = 'Take a deep [MASK] and hold it'\n",
     "\n",
     "# Make sure our text can be used in an SQL statement.\n",
@@ -113,6 +114,15 @@
    "id": "f3727075-4680-4f2f-83c2-17e5c22c6a57",
    "metadata": {},
    "source": [
+    "The udf takes various input parameters:\n",
+    "\n",
+    "* device_id: To run on a GPU, specify the valid cuda device ID.\n",
+    "* bucketfs_conn: The BucketFS connection name.\n",
+    "* sub_dir: The directory where the model is stored in the BucketFS.\n",
+    "* model_name: The name of the model to use for prediction.\n",
+    "* text_data: The text data containing masking tokens.\n",
+    "* top_k: The number of predictions to return.\n",
+    "\n",
     "We will collect the 5 best answers.\n",
     "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
@@ -141,7 +151,7 @@
     "        5\n",
     "    )\n",
     ")\n",
-    "SELECT filled_text, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
+    "SELECT filled_text, score, rank, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
    ],
    "outputs": [],
    "execution_count": null
@@ -151,6 +161,16 @@
    "id": "5c3c4047-2cbb-4111-a932-0224844c0f43",
    "metadata": {},
    "source": [
+    "As you can see, we select only some of the udf's output columns in these examples. If you need more details to your output, you can find those in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "The output of the model is sorted into the following columns by the udf:\n",
+    "\n",
+    "* filled_text: the filled text which replaces the masked part od the input text\n",
+    "* score: the confidence, with which the filled_text was predicted\n",
+    "* rank: the rank of the prediction. In this context, all predictions/labels for one input are ranked by their score. rank=1 means best result/highest score.\n",
+    "* error_message: error occurring while executing the udf will be saved here\n",
+    "\n",
+    "\n",
     "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
     "Another advantage of making predictions within the database is enhanced data security. The task of safeguarding privacy can be simplified given the fact that the source data never leaves the database machine.\n",
