Add not yet performing well model

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -13,7 +13,12 @@
     "\n",
     "In this notebook, we will show some basic operations on data using PyExasol. You can find more detailed information on using PyExasol in its [documentation](https://exasol.github.io/pyexasol/master/index.html).\n",
     "\n",
-    "The notebook is organized as a quickstart tutorial in which we will be looking at the flexibility and ease by which PyExasol allows users to import, export, and transform data both in Python and in the Exasol database. To showcase this ability, we will be using data on US flight delays. In particular, we will explore the delay caused by the carrier. We will rank the carriers using the delay as the performance metric. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation.\n",
+    "The notebook is organized as a quickstart tutorial in which we will be looking at the flexibility and ease by which PyExasol allows users to import, export, and transform data both in Python and in the Exasol database. To showcase this ability, we will be using:\n",
+    "* [Polars](https://pola.rs/) —  Polars is a lightning-fast DataFrame library for Python. The [import_from_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_polars) and [export_to_polars](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_polars) were introduced in PyExasol version `1.0.0` to allow users to quickly import & export their data into & from an Exasol Database.\n",
+    "* [PyArrow](https://pola.rs/) —  PyArrow is a cross-language development platform for in-memory data. The [import_from_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.import_from_parquet) and [export_to_parquet](https://exasol.github.io/pyexasol/1.3.0/api.html#pyexasol.ExaConnection.export_to_parquet) were introduced in PyExasol version `1.2.0` to allow users to quickly import & export their data into & from an Exasol Database.\n",
+    "* data on US flight delays — we will explore the delay caused by the carrier. We will rank the carriers using the delay as the performance metric. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation.\n",
+    "                                                                                                                                \n",
+    "We will use both the import and export functionalities of Polars & PyArrow in a a round trip manner with the data on US flight delays to illustrate how the PyExasol connector creates an important & flexible bridge between Python code and the Exasol Database, which can not only be leveraged in a specific case, like a project using Polars, but throughout a company's dynamic ecosystem, which may have various desired input and output formats.                                                                                                                          \n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -21,7 +26,8 @@
     "1. [Configure the AI Lab](../main_config.ipynb).\n",
     "\n",
     "Please note:\n",
-    "* AI Lab currently is shipped with PyExasol version `1.3.0`. The `import_from_parquet` and `export_to_parquet` were introduced in PyExasol version `1.2.0`, and the usage with polars was first introduced in PyExasol version `1.0.0`. Both functions for parquet and polars should work for all supported database versions, as these functions convert data into streamed CSVs before executing the IMPORT or EXPORT statement.\n",
+    "* AI Lab currently is shipped with PyExasol version `1.3.0`. \n",
+    "  * Functions for parquet and polars should work for all supported database versions, as these functions convert data into streamed CSVs before executing the IMPORT or EXPORT statement.\n",
     "\n",
     "## 1. Setup\n",
     "\n",
@@ -165,17 +171,6 @@
    "metadata": {},
    "source": [
     "Let's take a look at the contents on this file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "980f738c-418f-4df8-863d-7760c46cf6f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This can be removed once https://github.com/exasol/notebook-connector/issues/306 is resolved, and there's a new notebook-connector release.\n",
-    "%pip install polars==1.35.2"
    ]
   },
   {
@@ -423,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "highest_delay_parquet_directory = \"highest_delay\""
+    "local_directory = \"highest_delay\""
    ]
   },
   {
@@ -450,7 +445,10 @@
    "outputs": [],
    "source": [
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    conn.export_to_parquet(dst=highest_delay_parquet_directory, query_or_table=highest_delay_per_flight_query)"
+    "    conn.export_to_parquet(\n",
+    "        dst=local_directory, \n",
+    "        query_or_table=highest_delay_per_flight_query\n",
+    "    )"
    ]
   },
   {
@@ -465,7 +463,7 @@
     "**This allows the cell to be executed multiple times, unlike in 2.3.1.**\n",
     "\n",
     "\n",
-    "\"existing_data_behavior\" can be set to:\n",
+    "`existing_data_behavior` can be set to:\n",
     "> * `error` (default value) raises an error if **any** data exists in the destination.\n",
     "\n",
     "> * `overwrite_or_ignore` will ignore any existing data and will overwrite files with the same name as an output file. Other existing files will be ignored. This behavior, in combination with a unique basename_template for each write, will allow for an append workflow                                                                                                                                                             \n",
@@ -480,8 +478,11 @@
    "outputs": [],
    "source": [
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    conn.export_to_parquet(dst=highest_delay_parquet_directory, query_or_table=highest_delay_per_flight_query,\n",
-    "                          callback_params={\"existing_data_behavior\": \"overwrite_or_ignore\"})"
+    "    conn.export_to_parquet(\n",
+    "        dst=local_directory, \n",
+    "        query_or_table=highest_delay_per_flight_query,\n",
+    "        callback_params={\"existing_data_behavior\": \"overwrite_or_ignore\"}\n",
+    "    )"
    ]
   },
   {
@@ -512,12 +513,182 @@
    "outputs": [],
    "source": [
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    conn.export_to_parquet(dst=highest_delay_parquet_directory, query_or_table=highest_delay_per_flight_query,\n",
-    "                          callback_params={\"existing_data_behavior\": \"overwrite_or_ignore\",\n",
-    "                                           \"max_rows_per_file\":5,\n",
-    "                                           \"max_rows_per_group\":5\n",
-    "                                          })"
+    "    conn.export_to_parquet(\n",
+    "        dst=local_directory,\n",
+    "        query_or_table=highest_delay_per_flight_query,\n",
+    "        callback_params={\n",
+    "            \"existing_data_behavior\": \"overwrite_or_ignore\",\n",
+    "            \"max_rows_per_file\":5,\n",
+    "            \"max_rows_per_group\":5\n",
+    "        }\n",
+    "    )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caf8d68c-08fd-47bb-938a-5a4ebe4b78c5",
+   "metadata": {},
+   "source": [
+    "## 3. Roundtrip with Polars\n",
+    "\n",
+    "### 3.1 Exporting the Data to a Polars DataFrame\n",
+    "\n",
+    "This section demonstrates how to export data from an Exasol Database to a Polars DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "560424a8-2a33-4726-a524-862922bc75e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    highest_delay_per_flight_dataframe = conn.export_to_polars(\n",
+    "        query_or_table=highest_delay_per_flight_query,\n",
+    "    )\n",
+    "\n",
+    "highest_delay_per_flight_dataframe.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "164135ec-6743-48e9-adcc-d744d3a1aade",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_query = f\"\"\"\n",
+    "SELECT\n",
+    "  TO_CHAR(FL_DATE, 'D') AS day_of_week,\n",
+    "  CASE \n",
+    "        WHEN TO_CHAR(FL_DATE, 'D') IN ('6', '7') THEN TRUE \n",
+    "        ELSE FALSE \n",
+    "    END AS is_weekend,\n",
+    "  OP_CARRIER_AIRLINE_ID,\n",
+    "  CAST(TO_CHAR(TO_TIMESTAMP(CRS_DEP_TIME, 'HH24MI'), 'HH24') AS INTEGER) AS CRS_DEP_HOUR,\n",
+    "  CAST(TO_CHAR(TO_TIMESTAMP(CRS_ARR_TIME, 'HH24MI'), 'HH24') AS INTEGER) AS CRS_ARR_HOUR,\n",
+    "  ORIGIN_STATE_ABR,\n",
+    "  DEST_STATE_ABR,\n",
+    "  DISTANCE,\n",
+    "  ZEROIFNULL(CARRIER_DELAY) CARRIER_DELAY\n",
+    "FROM AI_LAB.US_FLIGHTS\n",
+    "  WHERE CANCELLED IS FALSE\n",
+    "  AND DIVERTED IS FALSE\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdc2a6bf-8eac-4abe-86e8-ccc90833f91c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
+    "    model_dataframe = conn.export_to_polars(query_or_table=model_query)\n",
+    "\n",
+    "model_dataframe.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49abf35b-c195-43c4-95ff-bcbb1cb564ba",
+   "metadata": {},
+   "source": [
+    "### 3.2 Training a Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63a34c03-0fc1-422f-b3d0-61382dd7e6d7",
+   "metadata": {},
+   "source": [
+    "First, we one-hot encode categorical values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57702e3c-44b3-4737-a67d-85ae050b1c49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Polars is not fully integrated into sklearn, so we switch to a Pandas DataFrame.\n",
+    "model_pandas = model_dataframe.to_pandas()\n",
+    "\n",
+    "# One-hot encode categorical values\n",
+    "model_pandas = pd.get_dummies(model_pandas, columns=['OP_CARRIER_AIRLINE_ID', 'ORIGIN_STATE_ABR', 'DEST_STATE_ABR'])\n",
+    "\n",
+    "model_pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebf680ae-d40e-4882-a0b3-5d5f41c6aae6",
+   "metadata": {},
+   "source": [
+    "Next, we split the data into training and validation sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d8871af-f26f-4bdd-b128-5dcaa2983bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X, y = model_pandas.drop(columns='CARRIER_DELAY'), model_pandas['CARRIER_DELAY']\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "884eb958-3984-4f97-bb06-778ec8be72d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import linear_model\n",
+    "\n",
+    "reg = linear_model.Ridge(alpha=.5)\n",
+    "reg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01f94497-6390-4b11-8d3f-27e2f67ddee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "pred_valid_lr= reg.predict(X_valid)\n",
+    "\n",
+    "print(np.sqrt(mean_squared_error(y_valid, pred_valid_lr)))\n",
+    "print(r2_score(y_valid, pred_valid_lr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54b13bf8-83d6-4517-b171-945ff2579a91",
+   "metadata": {},
+   "source": [
+    "### 3.3 Importing the Model Results into an Exasol Database Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91bf69c0-a46a-43f7-aad2-18075dc0db34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
