--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "## Use the language model\n",
     "\n",
-    "We are going to check the model output given the same question but two different contexts. In neither case the context has a direct answer to the question. We expect the answer to be relevant to the context."
+    "We are going to check the model output given the same question but two different contexts, using the `TE_QUESTION_ANSWERING_UDF`. In neither case the context has a direct answer to the question. We expect the answer to be relevant to the context."
    ],
    "id": "29e0d88c4e9185d0"
   },
@@ -99,7 +99,7 @@
    "cell_type": "code",
    "source": [
     "# This will be our question\n",
-    "TEST_QUESTION = 'What bitumen is used for?'\n",
+    "TEST_QUESTION = 'What is bitumen used for?'\n",
     "\n",
     "# Let's first try it first with the following context\n",
     "TEST_CONTEXT1 = \"\"\"\n",
@@ -122,7 +122,20 @@
    "id": "43f3f6e9-6f40-49b2-bbba-8954c35b5e06",
    "metadata": {},
    "source": [
-    "We will collect 5 best answers.\n",
+    "The udf takes various input parameters:\n",
+    "\n",
+    "* device_id: To run on a GPU, specify the valid cuda device ID.\n",
+    "* bucketfs_conn: The BucketFS connection name.\n",
+    "* sub_dir: The directory where the model is stored in the BucketFS.\n",
+    "* model_name: The name of the model to use for prediction.\n",
+    "* question: The question text.\n",
+    "* context_text: The context text, associated with the question.\n",
+    "* top_k: The max number of answers to return.\n",
+    "\n",
+    "You need to supply these parameters in the correct order. Further information can be found in the  <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "\n",
+    "We will collect at most the 5 best answers.\n",
     "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
@@ -161,7 +174,16 @@
    "id": "061139b0-2f3c-41c5-8176-d83789cb39e5",
    "metadata": {},
    "source": [
-    "Let's change the context and see a different set of answers."
+    "As you can see, we select only some of the udf's output columns in these examples.  If you need more details to your output, you can find information on all output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "The output of the model is sorted into the following columns by the udf:\n",
+    "\n",
+    "* answer: the generated answer for the input question\n",
+    "* score: the confidence of the answer\n",
+    "* rank: the rank of the answer. In this context, all answers for one input are ranked by their score. rank=1 means best result/highest score.\n",
+    "* error_message: error occurring while executing the udf will be saved here\n",
+    "\n",
+    "Let's now change the context and see a different set of answers."
    ]
   },
   {
@@ -176,6 +198,7 @@
     "has drainage holes, so plants don’t become waterlogged.\n",
     "\"\"\"\n",
     "\n",
+    "# Make sure our text can be used in an SQL statement.\n",
     "TEST_CONTEXT2 = TEST_CONTEXT2.replace(\"'\", \"''\")"
    ],
    "outputs": [],
