--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "In this notebook, we will load and use a generative language model that can produce a continuation for a given text. Learn more about the Text Generation task <a href=\"https://huggingface.co/tasks/text-generation\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
-    "To execute queries and load data from Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "To execute queries and load data from the Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -73,7 +73,7 @@
    "source": [
     "## Use the language model\n",
     "\n",
-    "Let's put the start of our conversation in a variable."
+    "Let's put our starting text in a variable. We will feed this text to the `TE_TEXT_GENERATION_UDF`, which will use the previously downloaded model to generate a continuation of the input text."
    ]
   },
   {
@@ -85,18 +85,6 @@
     "\n",
     "# Make sure our texts can be used in an SQL statement.\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "56498899-79f8-471e-8337-983184dcd513",
-   "metadata": {},
-   "source": [
-    "# Let's put a limit on the length of text the model can generate in one call.\n",
-    "# The limit is specified in the number of characters.\n",
-    "MAX_LENGTH = 30"
    ],
    "outputs": [],
    "execution_count": null
@@ -122,9 +110,39 @@
    "id": "27b1dd67-ffed-4bf8-9ee7-a1e003cdbcc6",
    "metadata": {},
    "source": [
-    "At the start, the `MY_TEXT` variable has an initial context. We will update and print this variable at every call to the model.\n",
-    "Please run the next cell multiple times to see how the text evolves."
+    "The udf takes various input parameters:\n",
+    "\n",
+    "* device_id: To run on a GPU, specify the valid cuda device ID.\n",
+    "* bucketfs_conn: The BucketFS connection name.\n",
+    "* sub_dir: The directory where the model is stored in the BucketFS.\n",
+    "* model_name: The name of the model to use for prediction.\n",
+    "* text_data: The text continue.\n",
+    "* max_length: The maximum total length of text to be generated.\n",
+    "* return_full_text: If set to FALSE, only added text is returned, otherwise the full text is returned.\n",
+    "\n",
+    "You need to supply these parameters in the correct order. Further information can be found in the  <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "We will use the `max_lenght` paramter to put a limit on the length of text the model can generate in one call."
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "MAX_LENGTH = 30",
+   "id": "eb3aa00858df05ad",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "At the start, the `MY_TEXT` variable gives an initial context to the generated text. We will update this variable with the generated text after each call to the udf, making it add to the text each time.\n",
+    "The generated text can be found in the `generated_text` column of the udf-output.\n",
+    "\n",
+    "You can run the next cell multiple times to see how the text evolves with multiple calls."
+   ],
+   "id": "470cbffaa64dbfc0"
   },
   {
    "cell_type": "code",
@@ -155,13 +173,19 @@
     "    conn.execute(query=activation_sql)\n",
     "    result = conn.export_to_pandas(query_or_table=sql).squeeze()\n",
     "    MY_TEXT = result['GENERATED_TEXT']\n",
-    "    # The error can be observed at result['ERROR_MESSAGE']\n",
+    "    # Errors can be observed at result['ERROR_MESSAGE']\n",
     "\n",
     "print(MY_TEXT)\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
    ],
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": " If you need more details to your output, you can find information on all output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.",
+   "id": "7e1d0ab9bebb94ee"
   }
  ],
  "metadata": {
