--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -178,7 +178,7 @@
    "id": "e1ae1f3c-5639-4935-9c28-3d8404587882",
    "metadata": {},
    "source": [
-    "As you can see, we select only some of the udf's output columns in these examples. If you need more details to your output, you can find those in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "As you can see, we select only some of the udf's output columns in these examples.  If you need more details to your output, you can find information on all output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
     "\n",
     "The output of the model is sorted into the following columns by the udf:\n",
     "\n",
