--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
@@ -174,17 +174,19 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "In this instance, we let the model return only the highest ranking result by setting `return_ranks = \"HIGHEST\"`. If we want to get all available results instead, we can run it with `return_ranks = \"ALL\"` instead:",
-   "id": "ffe2ad50985a8a9d"
+   "id": "ffe2ad50985a8a9d",
+   "metadata": {},
+   "source": [
+    "In this instance, we let the model return only the highest ranking result by setting `return_ranks = \"HIGHEST\"`. If we want to get all available results instead, we can run it with `return_ranks = \"ALL\"` instead:"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "id": "81695f65054def86",
+   "metadata": {},
    "source": [
     "%%sql\n",
-    "%%sql --save udf_output\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_ZERO_SHOT_TEXT_CLASSIFICATION_UDF(\n",
@@ -199,7 +201,6 @@
     ")\n",
     "SELECT label, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
    ],
-   "id": "81695f65054def86",
    "outputs": [],
    "execution_count": null
   },
@@ -249,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
