--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -126,23 +126,25 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "MAX_LENGTH = 30",
    "id": "eb3aa00858df05ad",
+   "metadata": {},
+   "source": [
+    "MAX_LENGTH = 30"
+   ],
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "470cbffaa64dbfc0",
+   "metadata": {},
    "source": [
     "At the start, the `MY_TEXT` variable gives an initial context to the generated text. We will update this variable with the generated text after each call to the udf, making it add to the text each time.\n",
     "The generated text can be found in the `generated_text` column of the udf-output.\n",
     "\n",
     "You can run the next cell multiple times to see how the text evolves with multiple calls."
-   ],
-   "id": "470cbffaa64dbfc0"
+   ]
   },
   {
    "cell_type": "code",
@@ -182,10 +184,12 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": " If you need more details to your output, you can find information on all output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.",
-   "id": "7e1d0ab9bebb94ee"
+   "id": "7e1d0ab9bebb94ee",
+   "metadata": {},
+   "source": [
+    " If you need more details to your output, you can find information on all output columns in the <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>."
+   ]
   }
  ],
  "metadata": {
@@ -204,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
